# agentic-data-analyst

./: .env.example  .gitignore  CLAUDE.md  README.md  agent_foundry.py  agents.py  execution_backend.py  main.py  memory_manager.py  memory_schema.py  missions.py  pptx_renderer.py  prompt_builders.py  pyproject.toml  pyrightconfig.json  research.ipynb  schema.py  service_layer.py
.github/workflows/: ci.yml
generated_modules/: data_profiler.py
lib/: data_discovery_lib.py  path_utils.py
prompts/: analyst_mission.txt  analyst_retry.txt  analyst_synthesis.txt  architect.txt  cdo_multi_sheet.txt  cdo_strategy.txt  critic_auditor.txt  formatter_agent.txt  qa_engineer.txt  self_validation.txt
prompts/specialists/: FINANCE.txt  GENERAL.txt  HEALTHCARE.txt  LOGISTICS.txt  RETAIL.txt  SPORTS.txt
src/: main.py
tests/: conftest.py  test_data_discovery_lib.py  test_data_profiler.py  test_execution_backend.py  test_memory_schema.py  test_missions_helpers.py  test_path_utils.py  test_prompt_builders.py  test_schema.py  test_service_layer.py  test_sql.py
